--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "node-gyp": "~1.0.1",
     "asserts": "~4.0.2",
     "body-parser": "~1.5.2",
     "connect": "~3.1.0",
